# mas-healthcare-prototype

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: admissions_base.csv  audit.jsonl  audit_summary.md  config_override.json  diagnoses_normalized.csv  features_by_admission.csv  registry.json  report.md  safety_report.json
dataset/: mimic_demo_profile.json  mimic_demo_profile.md
runs/20260111_131120/: audit_log.jsonl  cohort_report.json  cohort_report.md
src/autogenchat_demo/: __init__.py  main.py  pipeline.py  smoke_test_planning.py
src/autogenchat_demo/agents/: __init__.py  pipeline_agents.py  planning_agent.py
src/autogenchat_demo/planning/: __init__.py  plan_schema.py
src/autogenchat_demo/tools/: __init__.py  mimic_tools.py
src/mas_pipeline/: __init__.py  config.py  config_override.example.json  contracts.py  goal_parser.py  io.py  registry.py  run.py  steps.py  tools.py
