[project]
name = "mas-healthcare-prototype"
version = "0.1.0"
description = "Autogen agentchat demo wired to Gemini via API key."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "autogen-agentchat>=0.7.5",
  "autogen-core>=0.7.5",
  "autogen-ext[openai]>=0.7.5",
  "pandas>=2.1.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
autogenchat = "autogenchat_demo.main:run"
mas-pipeline = "mas_pipeline.run:run"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
